# tools2fast-fastapi

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: guide.md
examples/: example.py
src/tools2fast_fastapi/: __init__.py
src/tools2fast_fastapi/models/: __init__.py  mixins.py
src/tools2fast_fastapi/schemas/: __init__.py  mixins.py  response_schema.py
src/tools2fast_fastapi/services/: __init__.py  document_simple_revision_service.py  document_with_items_revision_service.py  number_service.py  revision_service.py  transaction_service.py
src/tools2fast_fastapi/utils/: __init__.py  routing.py
tests/: conftest.py  test_initial.py  test_response_schema.py  test_revision_service.py  test_schemas.py
